Привки по стилизации

--- a/catalog.html
+++ b/catalog.html
@@ -29,19 +29,24 @@
         <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </div>
       <div>
-        <button class="log-in" type="button">Войти</button>
-        <button class="registration" type="button">Регистрация</button>
-        <a class="user-panel" href="blank.html">
-          <img src="img/icon_user.png" alt="Иконка-кнопка личного кабинета пользователя">
-          Равшан Джамшутович
-        </a>
-        <a class="user-panel" href="blank.html">
-          <img src="img/icon_logout.png" alt="Иконка-кнопка для выхода из личного кабинета">
-        </a>
-        <div class="wrapper-account-panel">
-          <a class="my-orders" href="blank.html">Мои заказы</a>
-          <a class="personal-area" href="blank.html">Личный кабинет</a>
+        <div class="authorization-registration-panel">
+          <button class="log-in" type="button">Войти</button>
+          <button class="registration" type="button">Регистрация</button>
         </div>
+        <div class="account-info-active">
+          <a class="user-panel" href="blank.html">
+            <img src="img/icon_user.png" alt="Иконка-кнопка личного кабинета пользователя">
+            Равшан Джамшутович
+          </a>
+          <a class="user-panel" href="blank.html">
+            <img src="img/icon_logout.png" alt="Иконка-кнопка для выхода из личного кабинета">
+          </a>
+          <div class="wrapper-account-panel">
+            <a class="my-orders" href="blank.html">Мои заказы</a>
+            <a class="personal-area" href="blank.html">Личный кабинет</a>
+          </div>
+        </div>
+        
       </div>  
     </div>
     <section class="main-nav">
