--- a/index.html
+++ b/index.html
@@ -67,29 +67,29 @@
         </nav>
       </section>
     </header>
-    <main class="container">
+    <main class="">
       <h1 class="visually-hidden">Техномарт</h1>
-      <section class="promo-block">
+      <section class="promo-block container">
         <h2 class="visually-hidden">Промо-блок</h2>
         <article class="materials-cards">
           <h3>Материалы</h3>
-          <a href="blank.html">На любой вкус</a>
+          <a class="mat-link" href="blank.html">На любой вкус</a>
         </article>
         <article class="tools-cards">
           <h3>Инструмент</h3>
-          <a href="blank.html">На все случаи</a>
+          <a class="tool-link" href="blank.html">На все случаи</a>
         </article>
         <article class="equipment-cards">
           <h3>Техника</h3>
-          <a href="blank.html">Для стройки</a>
+          <a class="equ-link" href="blank.html">Для стройки</a>
         </article>
         <article class="sales-cards">
           <h3>Скидки 50%</h3>
-          <a href="blank.html">На 350 товаров</a>
+          <a class="sal-link" href="blank.html">На 350 товаров</a>
         </article>
         <article class="delivery-cards">
           <h3>Доставка</h3>
-          <a href="blank.html">Бесплатно</a>
+          <a class="del-link" href="blank.html">Бесплатно</a>
         </article>
         <article class="rotary-hammers-slider">
           <h3 class="slider-name">Перфораторы</h3>
@@ -110,53 +110,59 @@
           <!-- <span>радио точка</span> -->
         </article>
       </section>
-      <section class="product-cards">
-        <h2 class="sections-headline">Популярные товары:</h2>
-        <a class="all-popular-products" href="catalog.html">Все популярные товары</a>
-        <article>
-          <h3>Перфоратор Bosch bfg 9000</h3>
-          <img src="img/bosch_9000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
-          <div>
-            <button class="button-buy">Купить</button>
-            <button class="to-bookmarks">В закладки</button>
-          </div>
-          <p>32500 Р.</p>
-          <p>25500 Р.</p>
-        </article>
-        <article>
-          <h3>Перфоратор Bosch bfg 3000</h3>
-          <img src="img\bosch_3000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
-          <div>
-            <button class="button-buy">Купить</button>
-            <button class="to-bookmarks">В закладки</button>
-          </div>
-          <p>22500 Р.</p>
-          <p>15500 Р.</p>
-        </article>
-        <article>
-          <h3>Перфоратор Bosch bfg 6000</h3>
-          <img src="img\bosch_6000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
-          <div>
-            <button class="button-buy">Купить</button>
-            <button class="to-bookmarks">В закладки</button>
-          </div>
-          <p>30500 Р.</p>
-          <p>25500 Р.</p>
-        </article>
-        <article>
-          <h3>Перфоратор Bosch bfg 2000</h3>
-          <img src="img\bosch_2000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
-          <div>
-            <button class="button-buy">Купить</button>
-            <button class="to-bookmarks">В закладки</button>
-          </div>
-          <!-- <p>12500 Р.</p> -->
-          <p>12500 Р.</p>
-        </article>
+      <section class="product-cards container">
+        <div class="wrapp-ppular">
+          <h2 class="sections-headline">Популярные товары:</h2>
+          <a class="all-popular-products" href="catalog.html">Все популярные товары</a>
+        </div>
+        <div class="wrapp-card">
+          <article>
+            <h3>Перфоратор Bosch bfg 9000</h3>
+            <img src="img/bosch_9000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
+            <div>
+              <button class="button-buy">Купить</button>
+              <button class="to-bookmarks">В закладки</button>
+            </div>
+            <p>32500 Р.</p>
+            <p>25500 Р.</p>
+          </article>
+          <article>
+            <h3>Перфоратор Bosch bfg 3000</h3>
+            <img src="img\bosch_3000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
+            <div>
+              <button class="button-buy">Купить</button>
+              <button class="to-bookmarks">В закладки</button>
+            </div>
+            <p>22500 Р.</p>
+            <p>15500 Р.</p>
+          </article>
+          <article>
+            <h3>Перфоратор Bosch bfg 6000</h3>
+            <img src="img\bosch_6000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
+            <div>
+              <button class="button-buy">Купить</button>
+              <button class="to-bookmarks">В закладки</button>
+            </div>
+            <p>30500 Р.</p>
+            <p>25500 Р.</p>
+          </article>
+          <article>
+            <h3>Перфоратор Bosch bfg 2000</h3>
+            <img src="img\bosch_2000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
+            <div>
+              <button class="button-buy">Купить</button>
+              <button class="to-bookmarks">В закладки</button>
+            </div>
+            <!-- <p>12500 Р.</p> -->
+            <p>12500 Р.</p>
+          </article>
+        </div>
       </section>
-      <section class="popular-manufacturers">
-        <h2 class="sections-headline">Популярные производители</h2>
-        <a class="all-popular-manufacturers" href="catalog.html">Все производители</a>
+      <section class="popular-manufacturers container">
+        <div class="wrapp-ppular">
+          <h2 class="sections-headline">Популярные производители:</h2>
+          <a class="all-popular-manufacturers" href="catalog.html">Все производители</a>  
+        </div>
         <ul class="ul-style manufacturers">
           <li>
             <h3 class="visually-hidden">Bosch</h3>
@@ -192,91 +198,106 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2 class="sections-headline">Сервисы</h2>
-        <ul class="ul-style">
-          <li><p>Доставка</p></li>
-          <li><p>Гарантия</p></li>
-          <li><p>Кредит</p></li>
-        </ul>
-        <section>
-          <h3>Описание сервиса "Доставка"</h3>
-          <p>Мы с удовольствием доставим ваш товар прямо 
-            к вашему подъезду совершенно бесплатно!
-            Ведь мы неплохо заработаем, 
-            поднимая его на ваш этаж!</p>
-        </section>
-        <section>
-          <h3>Гарантия</h3>
-          <p></p>
-        </section>
-        <section>
-          <h3>Кредит</h3>
-          <p></p>
-        </section>
-      </section>
-      <section class="company-description">
-        <h2 class="sections-headline">Компания «Техномарт»</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
-          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-        </p> 
-        <p>Мы можем доставить ваш товар в самые отдаленные точки России!
-          Техномарт работает со многими транспортными компаниями:
-        </p>
-        <ul class="ul-style">
-          <li><p>Деловые линии</p> </li>
-          <li><p>Автотрейдинг</p></li>
-          <li><p>ЖелДорЭкспедиция</p></li>
-        </ul>
-        <a href="blank.html">Подробнее о компании</a>
-      </section>
-      <section class="company-description">
-        <h2 class="sections-headline">Контакты</h2>
-        <p>Вы можете забрать товар сами, 
-          заехав в наш офис:
-        </p>
-        <a href="#"><img src="img\map.jpg" alt="Изображение магазина на карте города"></a>
-        <button class="feed-back-button" type="button">Заблудились? Напишите нам!</button> 
-      </section>
-    </main>
-    <footer class="footer">
-      <a href="#" class="logo-footer"><img src="img/logo_footer.svg" alt="Логотип магазина"></a>
-      <div class="footer-wrapper-main">
-        <section>
-          <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
-          <nav class="footer-nav">
-            <ul class="ul-style">
-              <li><a href="blank.html">Компания</a></li>
-              <li><a href="blank.html">Новости</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="blank.html">Доставка</a></li>
-              <li><a href="blank.html">Контакты</a></li>
+      <section class="services">
+        <div class="container">
+          <h2 class="sections-headline">Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
+          <div class="wrap-services">
+            <ul class="services-list">
+              <li><p>Доставка</p></li>
+              <li><p>Гарантия</p></li>
+              <li><p>Кредит</p></li>
             </ul>
-          </nav>
-        </section>  
-        <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
-        <section>
-          <h2 class="visually-hidden">навигация по товарам\услугам</h2>
-          <nav class="footer-nav-services">
-            <ul class="footer-services ul-style">
-              <li><a href="blank.html">Материалы</a></li>
-              <li><a href="blank.html">Техника</a></li>
-              <li><a href="blank.html">Инструмент</a></li>
-              <li><a href="blank.html">Спецпредложения</a></li> 
-            </ul>
-          </nav>
+            <section>
+              <h3 class="services-delivery">Доставка</h3>
+              <p class="service-description">
+                Мы с удовольствием доставим ваш товар прямо<br> 
+                к вашему подъезду совершенно бесплатно! <br>
+                Ведь мы неплохо заработаем, <br> 
+                поднимая его на ваш этаж!</p>
+            </section>
+          </div>
+          <section class="visually-hidden">
+            <h3>Гарантия</h3>
+            <p></p>
+          </section>
+          <section class="visually-hidden">
+            <h3>Кредит</h3>
+            <p></p>
+          </section>
+        </div>
+      </section>
+      <div class="wrap-company-description container">
+        <section class="company-description container">
+          <h2 class="sections-headline">Компания «Техномарт»</h2>
+          <p class="service-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
+            строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+          </p> 
+          <p class="service-description">Мы можем доставить ваш товар в самые отдаленные точки России!
+            Техномарт работает со многими транспортными компаниями:
+          </p>
+          <ul class="list-couriers">
+            <li><p>Деловые линии</p> </li>
+            <li><p>Автотрейдинг</p></li>
+            <li><p>ЖелДорЭкспедиция</p></li>
+          </ul>
+          <a class="company-details" href="blank.html">Подробнее о компании</a>
+        </section>
+        <section class="company-description">
+          <h2 class="sections-headline">Контакты</h2>
+          <p>Вы можете забрать товар сами, 
+            заехав в наш офис:
+          </p>
+          <a href="#"><img src="img\map.jpg" alt="Изображение магазина на карте города"></a>
+          <button class="feed-back-button" type="button">Заблудились? Напишите нам!</button> 
         </section>
       </div>
-      <section class="second-footer-section">
-      <p class="copyright-company">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
-        <ul class="social-icons ul-style">
-          <li><a class="vk-link" href="#">Вконтакте</a></li>
-          <li><a class="fb-link" href="#">Фейсбук</a></li>
-          <li><a class="inst-link" href="#">Инстаграм</a></li>
-        </ul>
-      <p class="feedback-info">Обратная связь:<br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-      <p class="developed-by">Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer-wrapper-main">
+        <div class="wrap-main-nav container">
+          <a href="#" class="logo-footer"><img src="img/logo_footer.svg" alt="Логотип магазина">
+          </a>
+          <section>
+            <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
+            <nav class="footer-nav">
+              <ul class="ul-style">
+                <li><a href="blank.html">Компания</a></li>
+                <li><a href="blank.html">Новости</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="blank.html">Доставка</a></li>
+                <li><a href="blank.html">Контакты</a></li>
+              </ul>
+            </nav>
+          </section>  
+          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> <a href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a></p>
+          <section>
+            <h2 class="visually-hidden">навигация по товарам\услугам</h2>
+            <nav class="footer-nav-services">
+              <ul class="footer-services ul-style">
+                <li><a href="blank.html">Материалы</a></li>
+                <li><a href="blank.html">Техника</a></li>
+                <li><a href="blank.html">Инструмент</a></li>
+                <li><a href="blank.html">Спецпредложения</a></li> 
+              </ul>
+            </nav>
+          </section>
+        </div>
+      </div>
+      <div class="wrap-second-nav">
+        <section class="second-footer-section container">
+          <p class="copyright-company">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
+          <ul class="social-icons ul-style">
+            <li><a class="vk-link" href="#">Вконтакте</a></li>
+            <li><a class="fb-link" href="#">Фейсбук</a></li>
+            <li><a class="inst-link" href="#">Инстаграм</a></li>
+          </ul>
+          <p class="feedback-info">Обратная связь:<br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+          <p class="developed-by">Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+        </section>
+      </div>
     </footer>
     <section class="feedback-popup">
       <h2 class="visually-hidden">Напишите нам</h2>
