--- a/catalog.html
+++ b/catalog.html
@@ -261,8 +261,8 @@
         </section>
       </div>
     </div>
-    <div class="about-rotary">
-      <section class="container">
+    <div class="wrap-about-rotary">
+      <section class="about-rotary container">
         <h2 class="sections-headline">Пара слов о перфораторах</h2>
         <p class="about-perf">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
           Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
