--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </div>
       </section>
       <div class="wrap-company-description container">
-        <section class="company-description container">
+        <section class="company-description">
           <h2 class="sections-headline">Компания «Техномарт»</h2>
           <p class="service-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
             строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
@@ -245,7 +245,7 @@
           </ul>
           <a class="company-details" href="blank.html">Подробнее о компании</a>
         </section>
-        <section class="company-description">
+        <section class="company-contacts">
           <h2 class="sections-headline">Контакты</h2>
           <p>Вы можете забрать товар сами, 
             заехав в наш офис:
